--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@
     border-right: none;
     border-bottom: none;
     border-left: double #009933 5px;
-    
+    font-family: "Concert One";
 }
 .btn:hover{
     background-color:#ff794d;
     color: white;
     border-left: double white 5px;
+    box-shadow: 0px 0px 10px 5px #ffdab3;
 }
